--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,6 +1,7 @@
-nanoflann (1.0.0-1) unstable; urgency=low
+nanoflann (1.1.0-1) unstable; urgency=low
 
   * Initial packaging
+  * Solves ITP bug (Closes: #652103)
 
- -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Tue, 30 Aug 2011 18:06:00 +0200
+ -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Wed, 14 Dec 2011 17:00:00 +0100
 
