- Added asserts to detect whether the user passes NULL as query points. - Update of changelog

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,7 @@
 nanoflann 1.1.3: In SVN trunk
+  * Added asserts to detect whether the user passes NULL as query points.
+  * New method RadiusResultSet::worst_item()
+  * New method RadiusResultSet::set_radius_and_clear()
   * Avoid potential collision of min/max macros with <windows.h>
   * Removed unneeded #include's of std headers. 
 
