--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+nanoflann 1.1.4: (Development branck in SVN trunk)
+  * (No changes yet)
+
 nanoflann 1.1.3: Released Jun 6, 2012
   * GTest sources are now embedded, due to the changes in newer Ubuntu packages which don't carry the precompiled libs.
   * Added asserts to detect whether the user passes NULL as query points.
