--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+nanoflann 1.1.5: (Under development, SVN version)
+  * (no changes yet)
+
 nanoflann 1.1.4: Released Jan 11, 2013
   * Fixed compilation with Visual Studio 11 (MSVC 2012). 
   * Fixed compilation of gtest with VS11 and its _VARIADIC_MAX "bug".
