--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+nanoflann 1.1.6: (Under development)
+  * (no changes yet)
+
 nanoflann 1.1.5: Released Mar 25, 2013
   * Fixed: Memory pool wasn't freed after each call to buildIndex()
   * GCC: Added -isystem flag to gtest headers to avoid pedantic warnings.
