--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
 nanoflann 1.1.6: (Under development)
   * Fixed warnings about unused parameters.
+  * Fixed L1_adaptor.accum_dist(), which implemented L2 instead (Closes #1)
 
 nanoflann 1.1.5: Released Mar 25, 2013
   * Fixed: Memory pool wasn't freed after each call to buildIndex()
