--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+nanoflann 1.1.7: (Under development)
+  * (No changes yet!)
+
 nanoflann 1.1.6: Released May 14, 2013
   * Fixed warnings about unused parameters.
   * Fixed L1_adaptor.accum_dist(), which implemented L2 instead (Closes #1)
