--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+nanoflann 1.1.10: (Under development)
+  * Fixed metric classes constructors get const ref arguments but stored const values.
+
 nanoflann 1.1.9: Released Oct 2, 2015
   * Added KDTreeSingleIndexAdaptor::radiusSearchCustomCallback() (Based on a suggestion by Yannick Morin-Rivest)
   * Better documentation in class headers.
