--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,6 @@
-nanoflann 1.2.1: (Under development)
+nanoflann 1.2.1: Released Jun 1, 2016
   * Fix potential compiler warnings if `IndexType` is signed.
+  * New unit tests comparing the results to those of brute force search.
 
 nanoflann 1.2.0: Released May 5, 2016
   * Fixed: many classes constructors get const ref arguments but stored const values.
@@ -11,15 +12,15 @@ nanoflann 1.1.9: Released Oct 2, 2015
   * Parameter KDTreeSingleIndexAdaptorParams::dim has been removed since it was redundant.
 
 nanoflann 1.1.8: Released May 2, 2014
-  * Created hidden constructors in nanoflann class, to disallow unintentional copies which will corrupt 
+  * Created hidden constructors in nanoflann class, to disallow unintentional copies which will corrupt
     the internal pointers.
   * Fixed crash if trying to build an index of an empty dataset.
 
 nanoflann 1.1.7: Released Aug 24, 2013
-  * Two internal containers are now automatically defined as fixed-size arrays if the 
-    problem dimension is known at compile time, improving efficiency. 
+  * Two internal containers are now automatically defined as fixed-size arrays if the
+    problem dimension is known at compile time, improving efficiency.
     The new/modified datatypes are: KDTreeSingleIndexAdaptor::BoundingBox, KDTreeSingleIndexAdaptor::distance_vector_t
-  * Fixed compilation with GCC 4.8 and C++11 enabled (Thanks to Simon Praetorius). 
+  * Fixed compilation with GCC 4.8 and C++11 enabled (Thanks to Simon Praetorius).
 
 nanoflann 1.1.6: Released May 14, 2013
   * Fixed warnings about unused parameters.
@@ -31,10 +32,10 @@ nanoflann 1.1.5: Released Mar 25, 2013
   * GCC: Added -isystem flag to gtest headers to avoid pedantic warnings.
 
 nanoflann 1.1.4: Released Jan 11, 2013
-  * Fixed compilation with Visual Studio 11 (MSVC 2012). 
+  * Fixed compilation with Visual Studio 11 (MSVC 2012).
   * Fixed compilation of gtest with VS11 and its _VARIADIC_MAX "bug".
   * Added a security check to launch an exception if searches are attempted before buildIndex().
-  * New example to demonstrate save/load the index to files. 
+  * New example to demonstrate save/load the index to files.
   * save/load methods exposed as public.
 
 nanoflann 1.1.3: Released Jun 6, 2012
@@ -43,33 +44,32 @@ nanoflann 1.1.3: Released Jun 6, 2012
   * New method RadiusResultSet::worst_item()
   * New method RadiusResultSet::set_radius_and_clear()
   * Avoid potential collision of min/max macros with <windows.h>
-  * Removed unneeded #include's of std headers. 
+  * Removed unneeded #include's of std headers.
   * New sample code for vectors of vectors.
   * Fixed building of tests for MSVC in Windows.
   * Allow manually setting the path to Eigen3 (mainly for building examples under Windows).
 
 nanoflann 1.1.2: Released May 2, 2012
   * Better documentation and added graphs of a benchmarking for helping choosing "leaf_max_size".
-  * Now KDTreeSingleIndexAdaptor::buildIndex() can be called several times 
+  * Now KDTreeSingleIndexAdaptor::buildIndex() can be called several times
      even when the dataset size changes (Thanks to Rob McDonald for reporting!)
 
 nanoflann 1.1.1: Released Feb 1, 2012
-  * Some fixes to kd_tree index and L1/L2 metrics to allow distinct types 
-     in data elements and in the distances. This is mainly to permit elements 
+  * Some fixes to kd_tree index and L1/L2 metrics to allow distinct types
+     in data elements and in the distances. This is mainly to permit elements
 	 being vectors of integers (e.g. uint8_t) but distances being real numbers.
-  * Examples and unit tests have been corrected to use template arguments 
-     instead of being hard-wired to "float" data types (Thanks Thomas Vincent 
+  * Examples and unit tests have been corrected to use template arguments
+     instead of being hard-wired to "float" data types (Thanks Thomas Vincent
 	 for noticing!).
 
 nanoflann 1.1.0: Released Dec 15, 2011
   * Fixed warnings for MSVC and for GCC with "-Wall -pedantic"
-  * Updated performance tests to work with the final nanoflann code (they were 
+  * Updated performance tests to work with the final nanoflann code (they were
      written for a very early version).
-  * All main classes now have new template arguments for the type of indice, 
-     which now defaults to "size_t" instead of "int". In case this breaks 
-     backward compatibility in user code, especify "int" to override the default 
+  * All main classes now have new template arguments for the type of indice,
+     which now defaults to "size_t" instead of "int". In case this breaks
+     backward compatibility in user code, especify "int" to override the default
      template arguments, although "size_t" it's recommended.
 
 nanoflann 1.0.0: Released Aug 30, 2011
   * Initial version
-
