--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+nanoflann 1.3.0: (Unreleased)
+  * GSOC2017 contributions by Pranjal Kumar Rai:
+    * Support for dynamic datasets.
+    * Support for non-Euclidean spaces: SO(2), SO(3)
+
 nanoflann 1.2.3: Released Dec 20, 2016
   * Fixed: split plane now correctly chooses the dimensions with the largest span. 
     Should lead to more optimal trees.
