--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,5 @@
 nanoflann 1.3.0: Released Aug 28, 2018
+  * Instructions for `make install` for Linux and Windows (Closes #87).
   * Fix all (?) MSVC conversion warnings (Closes: #95).
   * Avoid need for _USE_MATH_DEFINES in MSVC (Closes: #96)
   * Eigen::Matrix datasets: now uses std::cref() to store a reference to matrix.
