--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+nanoflann 1.3.1: Released Oct 11, 2019
+  * Fixed bug in KDTreeSingleIndexDynamicAdaptor. See: https://github.com/jlblancoc/nanoflann/commit/a066148517d16c173954dcde13c1527481b9fad3
+  * Fix build in XCode.
+  * Simplify CMakeLists for Eigen example (requires Eigen3Config.cmake now)
+  * Avoid setting cmake global executable build path
+
 nanoflann 1.3.0: Released Aug 28, 2018
   * Instructions for `make install` for Linux and Windows (Closes #87).
   * Fix all (?) MSVC conversion warnings (Closes: #95).
